--- a/_pages/team.html
+++ b/_pages/team.html
@@ -1,59 +1,14 @@
-<!DOCTYPE html>
-<!-- saved from url=(0046)http://www.math.uvic.ca/~xuekui/people/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+---
+layout: archive
+title: "Team"
+permalink: /team/
+author_profile: true
+redirect_from:
+  - /team/
+  - /team.html
+---
 
-  <title>Xuekui Zhang - People</title>
-  <meta name="description" content="Dr. Xuekui Zhang is an assistant professor of statistics and a Canada Research Chair (tier 2) at the University of Victoria.">
-
-
-  <link rel="canonical" href="http://localhost:4000/people/">
-  <link href="../files/css" rel="stylesheet" type="text/css">
-  <link href="../files/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../files/font-awesome.min.css">
-  <link href="../files/app.css" rel="stylesheet">
-</head>
-
-  <body>
-
-    <header class="site-header">
-
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="http://www.math.uvic.ca/~xuekui/"><h1>Xuekui Zhang</h1></a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navigation">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://www.math.uvic.ca/~xuekui/#About">About </a></li>
-        <li><a href="http://www.math.uvic.ca/~xuekui/people">Research Team <span class="sr-only">(current)</span> </a></li>
-		<li><a href="http://www.math.uvic.ca/~xuekui/teaching">Teaching</a></li>  
-<!--        <li><a href="http://www.math.uvic.ca/~xuekui/publications">Publications</a></li> -->
-<!--        <li><a href="http://www.math.uvic.ca/~xuekui">People</a></li>  -->
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div>
-</nav>
-
-</header>
-
-    <div class="page-content">
-      <div class="content container">
-
-<h2 id="#Team">Research team</h2>	  
-
-	<h3><strong>Current members</strong><br>
+**Current members**
 		
 <h4>PhD Students</h4>
 <ul>
