--- a/_pages/team.html
+++ b/_pages/team.html
@@ -4,8 +4,8 @@ title: "Team"
 permalink: /team/
 author_profile: true
 ---
-
-**Current members**
+<h3><strong>Current members</strong><br>
+</h3>
 		
 <h4>PhD Students</h4>
 <ul>
@@ -168,33 +168,5 @@ First job:&nbsp;Data Science Consultant,  <a href="https://site.sa/"> SITE</a>, 
    <li><strong>Yitao Lu (University of Science and Technology of China)</strong>, Summer internship, 2019.7 – 2019.10 <br>  </li>
   <li><strong>Yushan Hu (Northwestern Polytechnical University)</strong>, Summer internship, 2019.7 – 2019.10 <br>  </li>
 </ul>
-
-
-<!--	
-  <li><strong>Alistair Brogan</strong>, Summer 2008
-    Topic: The Mathematics of Principal-Agent Problems
-  </li>
--->
 	
 </ul>
-
-<!--
-        <div class="footer">
-  <p>Content © Jane Ye 2009-2018
-    <br><span class="din-credit">Pattern courtesy of <a href="http://dinpattern.com/">DinPattern</a></span>
-  </p>
-</div>
--->
-		  
-</div>
-      
-    </div>
-
-    <script src="../files/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../files/bootstrap.min.js"></script>
-
-  
-
-
-</body></html>
