--- a/_pages/links.html
+++ b/_pages/links.html
@@ -5,9 +5,11 @@ permalink: /links/
 author_profile: true
 ---
 
-[A tutorial of using Compute Canada Servers prepared by my Student Simon Guo](https://github.com/sgyzetrov/ComputeCanada_Resources)    
-[Style guide for R programming](http://adv-r.had.co.nz/Style.html)  
-[Machine learning packages in R ](https://cran.r-project.org/web/views/MachineLearning.html)    
-[An interesting tutorial about deep learning in R](https://www.datacamp.com/community/tutorials/keras-r-deep-learning)    
-[Video: The 2nd generation seuqncing technology](https://www.youtube.com/watch?v=fCd6B5HRaZ8)    
-[Video: The 3rd generation seuqncing technology](https://www.youtube.com/watch?v=v8p4ph2MAvI)    
+<ul>
+<li> <a href="https://github.com/sgyzetrov/ComputeCanada_Resources"> A tutorial of using Compute Canada Servers prepared by my Student Simon Guo </a> </li>
+<li> <a href="http://adv-r.had.co.nz/Style.html"> Style guide for R programming </a> </li>
+<li> <a href="https://cran.r-project.org/web/views/MachineLearning.html"> Machine learning packages in R </a> </li>
+<li> <a href="\https://www.datacamp.com/community/tutorials/keras-r-deep-learning"> An interesting tutorial about deep learning in R </a> </li>
+<li> <a href="https://www.youtube.com/watch?v=fCd6B5HRaZ8"> Video: The 2nd generation seuqncing technology </a> </li>
+<li> <a href="https://www.youtube.com/watch?v=v8p4ph2MAvI"> Video: The 3rd generation seuqncing technology </a> </li>
+</ul>
