--- a/_pages/research.html
+++ b/_pages/research.html
@@ -39,4 +39,7 @@ Software package on <a href="https://cran.r-project.org/web/packages/GWASbyClust
 
 
 <h2>Selected Grants </h2>
-To be Added
+<p>  <a href="https://www.genomecanada.ca/en/programs/translation/funding-opportunities/genomic-applications-partnership-program"> Genome Canada GAPP </a> (co-lead, 2020-2024)  Next Generation Diagnostics for Clean Grapevines in Canada <br>
+<p>  <a href="https://www.nserc-crsng.gc.ca/professors-professeurs/grants-subs/dgigp-psigp_eng.asp"> NSERC Discovery Grant </a> (PI, 2017-2021) Integrated analysis of time-course multi-type Next Generation Sequencing data and biomarker discovery using multiple studies <br>
+<p>  <a href="https://cihr-irsc.gc.ca/e/49051.html"> CIHR Project Grant	 </a> (co-applicant, 2020-2023)  Childhood Obesity Management Using Innovative Digital Technology <br>	
+<p>  <a href="https://www.computecanada.ca/research-portal/accessing-resources/resource-allocation-competitions/"> Compute Canada Resource allocation competition </a> (PI, 2019-current)  Development of Novel Statistical Methods and software in Complex Genomics Data <br>	
