--- a/_pages/research.html
+++ b/_pages/research.html
@@ -38,8 +38,8 @@ Software package on <a href="https://cran.r-project.org/web/packages/GWASbyClust
 <p> <strong>PING</strong>: Probabilistic inference for Nucleosome Positioning with MNase-based or Sonicated Short-read Data.   <a href="https://bioconductor.org/packages/release/bioc/html/PING.html"> Bioconductor </a> <br>
 
 
-<h2>Selected Grants </h2>
-<p>  <a href="https://www.genomecanada.ca/en/programs/translation/funding-opportunities/genomic-applications-partnership-program"> Genome Canada GAPP </a> (co-lead, 2020-2024)  Next Generation Diagnostics for Clean Grapevines in Canada <br>
-<p>  <a href="https://www.nserc-crsng.gc.ca/professors-professeurs/grants-subs/dgigp-psigp_eng.asp"> NSERC Discovery Grant </a> (PI, 2017-2021) Integrated analysis of time-course multi-type Next Generation Sequencing data and biomarker discovery using multiple studies <br>
-<p>  <a href="https://cihr-irsc.gc.ca/e/49051.html"> CIHR Project Grant	 </a> (co-applicant, 2020-2023)  Childhood Obesity Management Using Innovative Digital Technology <br>	
-<p>  <a href="https://www.computecanada.ca/research-portal/accessing-resources/resource-allocation-competitions/"> Compute Canada Resource allocation competition </a> (PI, 2019-current)  Development of Novel Statistical Methods and software in Complex Genomics Data <br>	
+<h2>Funded Research Projects (Selected) </h2>
+<p>  <a href="https://www.genomecanada.ca/en/programs/translation/funding-opportunities/genomic-applications-partnership-program"> Genome Canada GAPP </a> (2020-2024) <em>$6,484,000</em>  Next Generation Diagnostics for Clean Grapevines in Canada  (Role: Co-Lead)<br>
+<p>  <a href="https://www.nserc-crsng.gc.ca/professors-professeurs/grants-subs/dgigp-psigp_eng.asp"> NSERC Discovery Grant </a> (2017-2021) <em>$95,000</em> Integrated analysis of time-course multi-type Next Generation Sequencing data and biomarker discovery using multiple studies (Role: Principal Investigator) <br>
+<p>  <a href="https://cihr-irsc.gc.ca/e/49051.html"> CIHR Project Grant	 </a> (2020-2023) <em>$443,700</em> Childhood Obesity Management Using Innovative Digital Technology (Role: Co-Applicant)<br>	
+<p>  <a href="https://www.computecanada.ca/research-portal/accessing-resources/resource-allocation-competitions/"> Compute Canada Resource allocation competition </a> (2019-current)  Development of Novel Statistical Methods and software in Complex Genomics Data (Role: Principal Investigator)<br>	
