--- a/_pages/research.html
+++ b/_pages/research.html
@@ -23,10 +23,10 @@ Software package on <a href="https://cran.r-project.org/web/packages/GWASbyClust
 <!-- <p><em>Lack of power is a issue problem for many GWAS studies, if the multiple testing problem is addressed using standard FDR control approach. Increasing sample size is not practical in most situations, hence analysis method with better power is desired. Using simulation studies, we found the real FDR of data analysis is always smaller than nominated FDR. This is due to the failure of incorporating strong LDs (high correlations) among SNPs. We proposed a novel method using Bayesian hierarchical models (model based clustering), which joint model all SNPs to better control FDR and improve power of the analysis of GWAS.</em></p>
 -->
 
-<h3>Two Submitted manuscripts about optimal design</h3>
+<h3>Submitted</h3>
     
 <p>The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach.  (2020) <a href="https://arxiv.org/abs/2005.10494"> Arxiv manuscript </a> <br>
-<em>(To solve a clinical trial design problem with computational challenges, we proposed a novel approach using GPU Monte Carlo and smoothing. The programming and first draft preparation are led by Yitao Lu, a summer intern student in my lab.)</em>
+<em>(To solve a clinical trial design problem with computational challenges, we proposed a novel approach using GPU Monte Carlo and smoothing. The programming and 1st draft preparation were led by my summer intern student, Yitao Lu.)</em>
 <p>Optimal Study Design for Reducing Variances of Coefficient Estimators in Change-Point Models.  (2020) <a href="https://arxiv.org/abs/2004.13963"> Arxiv manuscript </a> <br>
 
     
