--- a/_pages/team.html
+++ b/_pages/team.html
@@ -40,22 +40,20 @@ Award 1: (2018.9 - 2020.02) VADA Trainee Scholarship (NSERC CREATE) <font color=
  <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2018.9 – Present<br>
  <!--	Internship:  <br>  -->
 	 Research Assistant: (2019.5 -2019.8) Department of Mathematics and Statistics, UVic <br>
-	 Award: (2019.9-2020.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
+	 Award1: (2019.9-2020.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
+	 Internship: (2020.1-2020.6) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
+	 Award2: (2020.7-2020.10) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
- <li><strong>Qincheng Lu</strong>, 2018.9 – Present<br>
- <!--	Internship:  <br>  -->
- 	Award: (2018.9-2019.8) MITACS Globalink Graduate Fellowship   <font color="blue"> $15,000 </font> <br>
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
+
 <li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2019.9 – Present<br>
  <!--	Internship:  <br>  -->
 Award: (2019.9-2020.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
 Internship: (2020.7-2018.8) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
+Research Assistant: (2020.9 -2020.12) Department of Mathematics and Statistics, UVic <br>
+	
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -71,7 +69,7 @@ Internship: (2020.7-2018.8) Department of Mathematics and Statistics, University
 
 <li><strong>  Yuying Huang</strong> (Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic), 2019.9 – Present<br>
 Work Study: (2019.9 - 2020.04) Centre for Biomedical Research, UVic  <br>
-Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
+Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000 </font> <br>
 	
  <!--	Internship:  <br>  -->
  <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
@@ -82,7 +80,7 @@ Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
 
 <li><strong>  Yushan Hu</strong> , 2020.9 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
  <!--	Internship:  <br>  -->
-Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
+Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000 </font> <br>
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -138,8 +136,14 @@ First job:&nbsp;Data Science Consultant,  <a href="https://site.sa/"> SITE</a>, 
 	
 <h4>Master Students</h4>
 <ul>
-
- <li><strong> <a href="https://studentweb.uvic.ca/~ailanshi/"> Ailan Shi </a> </strong> , 2017.9 – 2019.5 <br>
+ <li><strong>Qincheng Lu</strong>, 2018.9 – Present<br>
+ <!--	Internship:  <br>  -->
+ 	Award: (2018.9-2019.8) MITACS Globalink Graduate Fellowship   <font color="blue"> $15,000 </font> <br>
+ <!--   Thesis: <em>A Novel Method for Differential Expression Analysis of Single Cell RNA-seq Data</em> <br> -->  
+    First job: PhD student, <a href="https://www.cs.mcgill.ca/"> McGill University</a>, Canada  <br> 
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+ <li><strong>Ailan Shi</strong> , 2017.9 – 2019.5 <br>
 	Internship: (2018.5-2018.8) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
     Award: (2018.9-2019.6) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
 	First job: <a href="https://www.lalamove.com/"> LalaMove</a>, Shenzhen
