--- a/_pages/team.html
+++ b/_pages/team.html
@@ -17,12 +17,12 @@ Award 2: (2018.9-2019.8) VADA Trainee Scholarship (NSERC CREATE) <font color="bl
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
   
-  <li><strong>Hoi Suen Wong</strong>, 2018.9 – Present<br>
-Award 1: (2018.9 - 2020.02) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000/year&nbsp; </font> <br>
+ <!--    <li><strong>Hoi Suen Wong</strong>, 2018.9 – Present<br>  --> 
+ <!--    Award 1: (2018.9 - 2020.02) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000/year&nbsp; </font> <br>  -->
   <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
   <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
+   <!--    </li> -->
  
 
 </ul>
