--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,7 +7,7 @@ author_profile: true
 		  <h3><strong>Regular Courses</strong></h3>	  
 <ul>
 <li>Spring 2021 (scheduled): STAT 454/563 &nbsp; TOPICS:APPLIED STATISTICS: Machine Learning </li>
-<li>Spring 2021 (scheduled): STAT 260 &nbsp;Introduction to Probability and Statistics I </li>
+<!-- <li>Spring 2021 (scheduled): STAT 260 &nbsp;Introduction to Probability and Statistics I </li> -->
 <li>Fall 2019: STAT 260 &nbsp;Introduction to Probability and Statistics I </li>
 <li>Spring 2019: STAT 454/563 &nbsp;TOPICS:APPLIED STATISTICS: Bioinformatics </li>
 <li>Fall 2018: STAT 454/563 &nbsp; TOPICS:APPLIED STATISTICS: Machine Learning	</li>
