--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -17,6 +17,7 @@ author_profile: true
 			  
 		<h3><strong>Directed Study Courses</strong></h3>	 
 <ul>
+<li>Fall 2020:  STAT 556 &nbsp; Applied Biostatistics Methods in Medical Research</li>
 <li>Spring 2020:  STAT 456 &nbsp; Advance topics in Bioinformatics</li>
 <li>Fall 2019:  STAT 556 &nbsp; Advance Machine learning and its application in Bioinformatics</li>
 <li>Summer 2019:  STAT 456/556 &nbsp; Advance Machine learning and its application in Bioinformatics</li>	
