--- a/_pages/research.html
+++ b/_pages/research.html
@@ -41,7 +41,7 @@ Software package on <a href="https://cran.r-project.org/web/packages/GWASbyClust
 <h2>Funded Research Projects (Selected) </h2>
 <p>  <a href="https://www.genomecanada.ca/en/programs/translation/funding-opportunities/genomic-applications-partnership-program"> CIHR project grant </a> (2020-2025, <em>$378,676</em>) Developing a Patient-Specific Surgical Decision-Assistance Tool to Improve Reverse
 Shoulder Replacement Outcomes  (Role: one of three Principal Investigators)<br>
-<p>  <a href="https://www.genomecanada.ca/en/programs/translation/funding-opportunities/genomic-applications-partnership-program"> Genome Canada GAPP </a> (2020-2024, <em>$6,484,000</em>) Next Generation Diagnostics for Clean Grapevines in Canada  (Role: Co-Lead)<br>
+<p>  <a href="https://www.genomecanada.ca/en/programs/translation/funding-opportunities/genomic-applications-partnership-program"> Genome Canada GAPP </a> (2020-2024, <em>$6,484,000</em>) Next Generation Diagnostics for Clean Grapevines in Canada  (Role: Academic Co-Leader)<br>
 <p>  <a href="https://www.chairs-chaires.gc.ca/home-accueil-eng.aspx#"> Canada Research Chair in Biostatistics and Bioinformatics (Tier 2) </a> (2017-2022, <em>$580,000</em>)  (Role: Principal Investigator) <br>
 <p>  <a href="https://www.nserc-crsng.gc.ca/professors-professeurs/grants-subs/dgigp-psigp_eng.asp"> NSERC Discovery Grant </a> (2017-2021, <em>$95,000</em>)  Integrated analysis of time-course multi-type Next Generation Sequencing data and biomarker discovery using multiple studies (Role: Principal Investigator) <br>
 <p>  <a href="https://cihr-irsc.gc.ca/e/49051.html"> CIHR Project Grant	 </a> (2020-2023, <em>$443,700</em>)  Childhood Obesity Management Using Innovative Digital Technology (Role: Co-Applicant)<br>	
