--- a/_pages/team.html
+++ b/_pages/team.html
@@ -126,7 +126,7 @@ Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
 <ul>
   <li><strong><a href="http://web.uvic.ca/~oalaqeli/omaralaqeeli.html"> Omar Alaqeeli</a></strong>, 2018.10 – 2019.12<br>
     <!--Assistant Professor, <a href="http://web.uvic.ca/~oalaqeli/omaralaqeeli.html">University of Texas at Arlington</a>, USA -->
-First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> Alyamamah University</a>, Saudi Arabia </li>
+First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li>
 </li>
 
 </ul>
