--- a/_pages/team.html
+++ b/_pages/team.html
@@ -107,6 +107,12 @@ Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
 	<li><strong>  Xiaolin Huang</strong>,  2020.9 – Present<br>	  </li>
 </ul>
 
+<h4>Visiting Faculty</h4>
+	<li><strong>  Elham Majd</strong> (Lecture, Islamic Azad University, Iran), 2020.10 – Present<br>	
+
+
+
+
 <h4>Undergraduate Students</h4>
 
 <ul>
@@ -127,7 +133,7 @@ Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
   <li><strong><a href="http://web.uvic.ca/~oalaqeli/omaralaqeeli.html"> Omar Alaqeeli</a></strong>, 2018.10 – 2019.12<br>
     <!--Assistant Professor, <a href="http://web.uvic.ca/~oalaqeli/omaralaqeeli.html">University of Texas at Arlington</a>, USA -->
 First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li>
-</li>
+
 
 </ul>
 
