--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -14,4 +14,4 @@ author_profile: true
 <h2>PhD/MSc students </h2> 
 
 <p> My students are encouraged to apply <a href="http://vada.cs.umanitoba.ca/admissions/application-form/"> VADA scholarship </a>. Research Assistant positions (supported by my research grants) are available for students with proven strong research ability and motivation. Department will provide about $5000/year TA salary for all graduate students. Students with A-class GPA receive Faculty of Science scholarship since their second year.  <br>
-<a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $2000 per term, which is much lower than most other universities in Canada.          
+<p> <a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $2000 per term, which is much lower than most other universities in Canada.<br>
