--- a/_pages/research.html
+++ b/_pages/research.html
@@ -37,7 +37,7 @@ Software package on <a href="https://cran.r-project.org/web/packages/GWASbyClust
 <p> <strong>PICS</strong>: Probabilistic inference of ChIP-Seq using an empirical Bayes mixture model approach.   <a href="https://bioconductor.org/packages/release/bioc/html/PICS.html"> Bioconductor </a> <br>
 <p> <strong>PING</strong>: Probabilistic inference for Nucleosome Positioning with MNase-based or Sonicated Short-read Data.   <a href="https://bioconductor.org/packages/release/bioc/html/PING.html"> Bioconductor </a> <br>
 
-
+<!--
 <h2>Funded Research Projects (Selected) </h2>
 <p>  <a href="https://www.genomecanada.ca/en/programs/translation/funding-opportunities/genomic-applications-partnership-program"> CIHR project grant </a> (2020-2025, <em><u>$378,676</u></em>) Developing a Patient-Specific Surgical Decision-Assistance Tool to Improve Reverse
 Shoulder Replacement Outcomes  (Role: one of three Principal Investigators)<br>
@@ -45,4 +45,4 @@ Shoulder Replacement Outcomes  (Role: one of three Principal Investigators)<br>
 <p>  <a href="https://www.chairs-chaires.gc.ca/home-accueil-eng.aspx#"> Canada Research Chair in Biostatistics and Bioinformatics (Tier 2) </a> (2017-2022, <em><u>$580,000</u></em>)  (Role: Principal Investigator) <br>
 <p>  <a href="https://www.nserc-crsng.gc.ca/professors-professeurs/grants-subs/dgigp-psigp_eng.asp"> NSERC Discovery Grant </a> (2017-2022, <em><u>$95,000</u></em>)  Integrated analysis of time-course multi-type Next Generation Sequencing data and biomarker discovery using multiple studies (Role: Principal Investigator) <br>
 <p>  <a href="https://cihr-irsc.gc.ca/e/49051.html"> CIHR Project Grant	 </a> (2020-2023, <em><u>$443,700</u></em>)  Childhood Obesity Management Using Innovative Digital Technology (Role: Co-Applicant)<br>	
-<p>  <a href="https://www.computecanada.ca/research-portal/accessing-resources/resource-allocation-competitions/"> Compute Canada Resource allocation competition </a> (2019-current)  Development of Novel Statistical Methods and software in Complex Genomics Data (Role: Principal Investigator)<br>	
+<p>  <a href="https://www.computecanada.ca/research-portal/accessing-resources/resource-allocation-competitions/"> Compute Canada Resource allocation competition </a> (2019-current)  Development of Novel Statistical Methods and software in Complex Genomics Data (Role: Principal Investigator)<br>	 -->
