--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -7,7 +7,7 @@ author_profile: true
 
 <h2>Post Doctoral Fellowship </h2> 
 
-<p> I am hiring a postdoctoral fellow (<a href="https://ubcxzhang.github.io/files/Postdoctoral Fellowship in Statistical Genomics and Machine Learning.pdf"> advertisements document</a>) to work on my recently <a href="https://ubcxzhang.github.io/projects/"> funded projects</a>. Successful candidates are expected to have solid statistics knowledge and strong skills in programming and writing. Background in machine learning and/or statistical genomics are preferred.  <br>
+<p> I am hiring a postdoctoral fellow (<a href="https://ubcxzhang.github.io/files/Postdoctoral_Fellowship_Advertisment.pdf"> advertisements document</a>) to work on my recently <a href="https://ubcxzhang.github.io/projects/"> funded projects</a>. Successful candidates are expected to have solid statistics knowledge and strong skills in programming and writing. Background in machine learning and/or statistical genomics are preferred.  <br>
 
 <p>Candidates are welcome to apply through <a href="https://www.mathjobs.org/jobs/list/16369"> this job posting link </a>, which will be jointly funded by <a href="https://www.pims.math.ca/scientific/postdoctoral"> PIMS </a> and my research grants. Other co-fundings can be applied (as alternatives of PIMS funding) by candidates, such as <a href="http://liberero.ca/fellowship-details/"> LIBERERO postdoc </a>, <a href="http://www.nserc-crsng.gc.ca/Students-Etudiants/PD-NP/PDF-BP_eng.asp"> NSERC postdoc </a>, <a href="https://www.mitacs.ca/en/programs/accelerate/industrial-postdoc"> MITACS postdoc </a>, <a href="https://www.mitacs.ca/en/programs/globalink/come-to-canada/early-career-fellowship-china"> MITACS Fellowship - China </a>.  <br>
 
