--- a/_pages/team.html
+++ b/_pages/team.html
@@ -108,7 +108,7 @@ Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
 </ul>
 
 <h4>Visiting Faculty</h4>
-	<li><strong>  Elham Majd</strong> (Lecture, Islamic Azad University, Iran), 2020.10 – Present<br>	
+	<li><strong>  Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – Present<br>	
 
 
 
