--- a/_pages/research.html
+++ b/_pages/research.html
@@ -7,7 +7,7 @@ author_profile: true
 
 <h2>Selected recent publications </h2>
     
-<h3>Published </h3>
+<!--<h3>Published </h3> -->
 
 <p>The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2020 Accepted) <a href="https://arxiv.org/abs/2005.10494"> Arxiv manuscript </a> <br>
 <em>(The first author, Yitao Lu, is a summer intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.)</em>
