--- a/_pages/research.html
+++ b/_pages/research.html
@@ -13,7 +13,7 @@ author_profile: true
 <em>(The first author, Yitao Lu, is a summer intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.)</em>
 	
 	
-<p>On logistic Box-Cox regression for flexibly estimating the shape and strength of exposure-disease relationships. (<em>The Canadian Journal of Statistics</em> 2020 Accepted) <a href="https://arxiv.org/abs/1901.11362"> Arxiv manuscript </a>
+<p>On logistic Box-Cox regression for flexibly estimating the shape and strength of exposure-disease relationships. (<em>The Canadian Journal of Statistics</em> 2020 Accepted) <a href="http://dx.doi.org/10.1002/cjs.11587"> Link of Paper </a>
 <!--     or <a href="https://doi.org/10.1111/jfir.12210"> Journal paper Link </a> --->
     <br>
 
