--- a/_pages/research.html
+++ b/_pages/research.html
@@ -8,26 +8,29 @@ author_profile: true
 <h2>Selected recent publications </h2>
     
 <!--<h3>Published </h3> -->
-
-<p>The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2020 Accepted) <a href="https://arxiv.org/abs/2005.10494"> Arxiv manuscript </a> <br>
-<em>(The first author, Yitao Lu, is a summer intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.)</em>
+<ol>
+<li>The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2020 Accepted) <a href="https://arxiv.org/abs/2005.10494"> Arxiv manuscript </a> <br>
+<em>(<small> The first author, Yitao Lu, is a summer intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
 	
 	
-<p>On logistic Box-Cox regression for flexibly estimating the shape and strength of exposure-disease relationships. (<em>The Canadian Journal of Statistics</em> 2020) <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cjs.11587"> Link of Paper </a>
+<li>On logistic Box-Cox regression for flexibly estimating the shape and strength of exposure-disease relationships. (<em>The Canadian Journal of Statistics</em> 2020) <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cjs.11587"> Link of Paper </a>
 <!--     or <a href="https://doi.org/10.1111/jfir.12210"> Journal paper Link </a> --->
-    <br>
+    </li>
 
-<p>Stock Market Openness and Market Quality: Evidence from the Shanghai-Hong Kong Stock Connect Program. (<em>Journal of Financial Research</em> 2020) <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3543713"> SSRN manuscript </a>  or <a href="https://doi.org/10.1111/jfir.12210"> Journal paper </a> <br>
+<li>Stock Market Openness and Market Quality: Evidence from the Shanghai-Hong Kong Stock Connect Program. (<em>Journal of Financial Research</em> 2020) <!--<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3543713"> SSRN manuscript </a>  or -->
+	<a href="https://doi.org/10.1111/jfir.12210"> Link of Paper </a> </li>
      
-<p>Simultaneous prediction of multiple outcomes using revised stacking algorithms. (<em>Bioinformatics</em> 2020) <a href="https://doi.org/10.1093/bioinformatics/btz531"> Link of Paper </a> <br>
-Software package on <a href="https://cran.r-project.org/web/packages/MTPS/index.html"> CRAN </a> and <a href="https://github.com/ubcxzhang/MTPS"> GitHub </a> </p>
+<li>Simultaneous prediction of multiple outcomes using revised stacking algorithms. (<em>Bioinformatics</em> 2020) <a href="https://doi.org/10.1093/bioinformatics/btz531"> Link of Paper </a> and 
+<a href="https://cran.r-project.org/web/packages/MTPS/index.html"> Software package </a> </li>
+<!--	and <a href="https://github.com/ubcxzhang/MTPS"> GitHub </a> -->
 <!--<p><em> In many situations, we are interested in prediction of multiple outcomes. Compared with predicting each outcome individually, the prediction performance can be improved by simutanuously predicting all outcomes and allow predictions borrow information among different outcomes. There are many prediction methods developed for single outcome prediction, but most of them have/can not been extended into multi-outcome prediction version. Neural network is the major methods for multitask prediction problems. We proposed an novel algorithm that can construct complex multi-outcome prediction models using almost any single-outcome prediction methods as building blocks. Our novel algorithm is not only flexible, but also powerful. Using cross validation studies on data from HIV database, we show our method outperform multi-outcome neural network and other multi-task prediction methods in the literature.</em></p>
 -->
-<p> Model-based clustering for identifying disease-associated SNPs in case-control genome-wide association studies. (<em>Scientific Reports</em> 2019) <a href="https://www.nature.com/articles/s41598-019-50229-6"> Link of Paper</a> <br>
-Software package on <a href="https://cran.r-project.org/web/packages/GWASbyCluster/index.html">  CRAN </a>  and <a href="https://github.com/ubcxzhang/GWASbyCluster"> GitHub</a> </p>
+<li> Model-based clustering for identifying disease-associated SNPs in case-control genome-wide association studies. (<em>Scientific Reports</em> 2019) <a href="https://www.nature.com/articles/s41598-019-50229-6"> Link of Paper</a> and <a href="https://cran.r-project.org/web/packages/GWASbyCluster/index.html">  Software package </a> </li>
+	<!-- and <a href="https://github.com/ubcxzhang/GWASbyCluster"> GitHub</a> -->
 <!-- <p><em>Lack of power is a issue problem for many GWAS studies, if the multiple testing problem is addressed using standard FDR control approach. Increasing sample size is not practical in most situations, hence analysis method with better power is desired. Using simulation studies, we found the real FDR of data analysis is always smaller than nominated FDR. This is due to the failure of incorporating strong LDs (high correlations) among SNPs. We proposed a novel method using Bayesian hierarchical models (model based clustering), which joint model all SNPs to better control FDR and improve power of the analysis of GWAS.</em></p>
 -->
 
+</ol>	
 
 <!--<h3>Submitted</h3>
 <p>Optimal Study Design for Reducing Variances of Coefficient Estimators in Change-Point Models.  (2020) <a href="https://arxiv.org/abs/2004.13963"> Arxiv manuscript </a> <br>
