--- a/_pages/research.html
+++ b/_pages/research.html
@@ -9,11 +9,11 @@ author_profile: true
     
 <!--<h3>Published </h3> -->
 <ol>
-<li>The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2020 Accepted) <a href="https://arxiv.org/abs/2005.10494"> Arxiv manuscript </a> <br>
+<li>The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2021 ) <a href="https://doi.org/10.1002/sim.8868"> Link of Paper </a>
 <em>(<small> The first author, Yitao Lu, is a summer intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
 	
 	
-<li>On logistic Box-Cox regression for flexibly estimating the shape and strength of exposure-disease relationships. (<em>The Canadian Journal of Statistics</em> 2020) <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cjs.11587"> Link of Paper </a>
+<li>On logistic Box-Cox regression for flexibly estimating the shape and strength of exposure-disease relationships. (<em>The Canadian Journal of Statistics</em> 2021) <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cjs.11587"> Link of Paper </a>
 <!--     or <a href="https://doi.org/10.1111/jfir.12210"> Journal paper Link </a> --->
     </li>
 
