--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -4,6 +4,7 @@ title: "Funded Projects (selected)"
 permalink: /projects/
 author_profile: true
 ---
+<p>  <a href="https://www.genomebc.ca/funding-opportunity/sector-innovation-program/"> NRC Digital Health and Geospatial Analytics Program </a> (2021-2023, <em><u>$580,634</u></em>) Learning from big historical geospatial data on environmental impact to shellfish industry for predictive models and monitoring toolkits &nbsp; &nbsp;(Role: Principal Investigators)<br>
 <p>  <a href="https://www.genomebc.ca/funding-opportunity/sector-innovation-program/"> Genome BC SIP grant </a> (2021-2023, <em><u>$250,000</u></em>) Endo-phenotyping of human alveolar macrophages from bronchoalveolar lavage (BAL)&nbsp; &nbsp;(Role: Principal Investigators)<br>
 <p>  <a href="https://www.genomecanada.ca/en/programs/translation/funding-opportunities/genomic-applications-partnership-program"> CIHR project grant </a> (2020-2025, <em><u>$378,676</u></em>) Developing a Patient-Specific Surgical Decision-Assistance Tool to Improve Reverse
 Shoulder Replacement Outcomes  (Role: one of three Principal Investigators)<br>
