--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -11,7 +11,7 @@ author_profile: true
 
 <p>Candidates are welcome to apply through <a href="https://www.mathjobs.org/jobs/list/16369"> this job posting link </a>, which will be jointly funded by <a href="https://www.pims.math.ca/scientific/postdoctoral"> PIMS </a> and my research grants. Other co-fundings can be applied (as alternatives of PIMS funding) by candidates, such as <a href="http://liberero.ca/fellowship-details/"> LIBERERO postdoc </a>, <a href="http://www.nserc-crsng.gc.ca/Students-Etudiants/PD-NP/PDF-BP_eng.asp"> NSERC postdoc </a>, <a href="https://www.mitacs.ca/en/programs/accelerate/industrial-postdoc"> MITACS postdoc </a>, <a href="https://www.mitacs.ca/en/programs/globalink/come-to-canada/early-career-fellowship-china"> MITACS Fellowship - China </a>.  <br>
 	
-<p> I am also hiring a postdoctoral fellow specifically for a NRC funded project (<a> href="https://ubcxzhang.github.io/files/NRC_postdoc.pdf">advertisements document </a>). This one requires slightly different skill sets than my general hire. <br>	
+<p> I am also hiring a postdoctoral fellow specifically for a NRC funded project (<a href="https://ubcxzhang.github.io/files/NRC_postdoc.pdf">advertisements document </a>). This one requires slightly different skill sets than my general hire. <br>	
 
 <h2>PhD/MSc students </h2> 
 
