--- a/_pages/research.html
+++ b/_pages/research.html
@@ -9,7 +9,8 @@ author_profile: true
     
 <!--<h3>Published </h3> -->
 <ol>
-<li>The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2021 ) <a href="https://doi.org/10.1002/sim.8868"> Link of Paper </a>
+<li>The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2021 ) <a href="https://doi.org/10.1002/sim.8868"> Link of Paper </a> and 
+<a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a> <br>
 <em>(<small> The first author, Yitao Lu, is a summer intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
 	
 	
@@ -39,11 +40,11 @@ author_profile: true
 
     
 <h2>Software </h2>
-
-<p> <strong>MTPS</strong>: Multi-Task Prediction using Stacking Algorithms.   <a href="https://cran.r-project.org/web/packages/MTPS/"> CRAN</a> <br>
-<p> <strong>GWASbyCluster</strong>: Identifying disease-associated significant SNPs using clustering approach.   <a href="https://cran.r-project.org/web/packages/GWASbyCluster"> CRAN </a> <br>
-<p> <strong>PICS</strong>: Probabilistic inference of ChIP-Seq using an empirical Bayes mixture model approach.   <a href="https://bioconductor.org/packages/release/bioc/html/PICS.html"> Bioconductor </a> <br>
-<p> <strong>PING</strong>: Probabilistic inference for Nucleosome Positioning with MNase-based or Sonicated Short-read Data.   <a href="https://bioconductor.org/packages/release/bioc/html/PING.html"> Bioconductor </a> <br>
+<p> <strong>DesignCTPB</strong>: Design Clinical Trials with Potential Biomarker Effect.   <a href="https://cran.r-project.org/web/packages/DesignCTPB/"> CRAN</a> </p>
+<p> <strong>MTPS</strong>: Multi-Task Prediction using Stacking Algorithms.   <a href="https://cran.r-project.org/web/packages/MTPS/"> CRAN</a> </p>
+<p> <strong>GWASbyCluster</strong>: Identifying disease-associated significant SNPs using clustering approach.   <a href="https://cran.r-project.org/web/packages/GWASbyCluster"> CRAN </a> </p>
+<p> <strong>PICS</strong>: Probabilistic inference of ChIP-Seq using an empirical Bayes mixture model approach.   <a href="https://bioconductor.org/packages/release/bioc/html/PICS.html"> Bioconductor </a> </p>
+<p> <strong>PING</strong>: Probabilistic inference for Nucleosome Positioning with MNase-based or Sonicated Short-read Data.   <a href="https://bioconductor.org/packages/release/bioc/html/PING.html"> Bioconductor </a> </p><br>
 
 <!--
 <h2>Funded Research Projects (Selected) </h2>
