--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -5,7 +5,7 @@ permalink: /openings/
 author_profile: true
 ---
 
-<h2>Post Doctoral Fellowship </h2> 
+<h2>Post Doctoral Fellowships </h2> 
 
 <p> A postdoctoral fellow specifically for a NRC funded project (<a href="https://ubcxzhang.github.io/files/NRC_postdoc.pdf">advertisements document</a>). <br>	
 
