--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Funded Projects (selected)"
+title: "Currently Funded Projects (selected)"
 permalink: /projects/
 author_profile: true
 ---
