--- a/_pages/research.html
+++ b/_pages/research.html
@@ -1,11 +1,11 @@
 ---
 layout: archive
-title: "Research"
+title: "Publications"
 permalink: /research/
 author_profile: true
 ---
 
-<h2>Selected recent publications </h2>
+<h2> Recently Published Papers (Selected) </h2>
     
 <!--<h3>Published </h3> -->
 <ol>
