--- a/_pages/links.html
+++ b/_pages/links.html
@@ -7,6 +7,7 @@ author_profile: true
 
 <ul>
 <li> <a href="https://github.com/sgyzetrov/ComputeCanada_Resources"> A tutorial of using Compute Canada Servers prepared by my Student Simon Guo </a> </li>
+<li> <a href="https://www.youtube.com/playlist?list=PLmTpraKlPXDSPbP2L8MYZoweGSzi9gNTr"> The Data Scientist's Toolbox, Video by big names from Hopkins </a> </li>	
 <li> <a href="http://adv-r.had.co.nz/Style.html"> Style guide for R programming </a> </li>
 <li> <a href="https://cran.r-project.org/web/views/MachineLearning.html"> Machine learning packages in R </a> </li>
 <li> <a href="\https://www.datacamp.com/community/tutorials/keras-r-deep-learning"> An interesting tutorial about deep learning in R </a> </li>
