--- a/_pages/team.html
+++ b/_pages/team.html
@@ -105,6 +105,7 @@ Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 	</li>
 	<li><strong>  Yichen Yan</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.9 – Present<br>	  </li>	
+  Award: (2020.9) UVic Facuty of Graduate Studies Entrance Scholarship,   <font color="blue">$2,500</font> <br>
 	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.9 – Present<br>	  </li>
 	<li><strong>  Xiaolin Huang</strong>,  2020.9 – Present<br>	  </li>
 </ul>
