--- a/_pages/links.html
+++ b/_pages/links.html
@@ -14,4 +14,5 @@ author_profile: true
 <li> <a href="https://www.youtube.com/watch?v=fCd6B5HRaZ8"> Video: The 2nd generation seuqncing technology </a> </li>
 <li> <a href="https://www.youtube.com/watch?v=v8p4ph2MAvI"> Video: The 3rd generation seuqncing technology </a> </li>
 <li> <a href="https://www.youtube.com/watch?v=k9VFNLLQP8c&t=31s&ab_channel=iBiologyTechniques"> Video: Single-cell seuqncing technology </a> </li>  
+<li> <a href="https://www.youtube.com/watch?v=UbOlhhpNj-A&ab_channel=mathetal"> Video: Tutorial for using Seurat to annotate cell-types in clusters of scRNA-seq data</a> </li>  
 </ul>
